feat: Enhance Gemini extraction and error handling
Introduces `react-error-boundary` for robust error management and refactors the Gemini service to use a more powerful model (`gemini-3-pro-preview`) for improved stamp data extraction accuracy. The API key handling and response parsing within the Gemini service have also been corrected.

Additionally, minor improvements to image resizing error handling in the Uploader component and map initialization stability in the StoreMap component have been made. Dependencies are updated to include `react-error-boundary` and `vite`.

--- a/index.html
+++ b/index.html
@@ -40,13 +40,15 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react-error-boundary": "https://esm.sh/react-error-boundary@^5.0.0",
     "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
     "leaflet": "https://esm.sh/leaflet@^1.9.4",
     "firebase/app": "https://esm.sh/firebase@^10.8.0/app",
     "firebase/auth": "https://esm.sh/firebase@^10.8.0/auth",
     "firebase/firestore": "https://esm.sh/firebase@^10.8.0/firestore",
-    "firebase/": "https://esm.sh/firebase@^10.8.0/"
+    "firebase/": "https://esm.sh/firebase@^10.8.0/",
+    "vite": "https://esm.sh/vite@^7.3.1"
   }
 }
 </script>
